--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="#skills">Skill</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contactMe">Contact</a>
+            <a class="nav-link" href="#contactMe">Contact Me</a>
           </li>
         </ul>
 
