--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h2>Hello !</h2>
       <img class="germanDB" src="images/GermanDB.jpeg" alt="German-having-beer">
       <p class="intro">I am a beginner level web developer. I aspire to be a
-        proficient and succesful full stack web developer. I do also love creating
+        profficient and succesful full stack web developer. I do also love creating
         and arranging music.</p>
     </div>
   
