--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <p>I began my coding journey in 2017. I developed a passion for coding after
       creating my first Tic Tac Toe game using Javascript. Watching the project come
       to life sparked the flame that is my driving force today. I am proficent in: HTML, CSS,
-      Javascript and work with such frameworks as: Bootstrap and JQuery. My personal current goal 
+      Javascript and work with such frameworks as: Bootstrap and JQuery. My current goal 
       is to develop the high quailty applications and websites for high-end clients.</p>
     </div>
   </div> 
